# arcmugbot

./: .gitignore  Cargo.toml
src/: commands.rs  macros.rs  main.rs  record.rs
src/arcana/: mod.rs
src/arcana/iidx/: chart.rs  mod.rs  music.rs  profile.rs  score_history.rs
src/handlers/: chuni_tolerance_calc.rs  iidxsp12.rs  mod.rs
src/handlers/arcana/: mod.rs
src/handlers/arcana/iidx/: mod.rs  music.rs  profile.rs  recent.rs
src/handlers/maimai_courses/: calc.rs  mod.rs  passed.rs  query.rs  rank.rs  score.rs  submit.rs
src/maimai_courses/: course.rs  mod.rs  record.rs  submission.rs
