[package]
name = "arcmugbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5", features = ["macros", "auto-send"] }
tokio = { version = "1.8", features = ["full"] }
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.5"
indexmap = "1.7"