[package]
name = "arcmugbot"
version = "0.4.0"
license = "MIT"
authors = ["Kaiyang Wu <self@origincode.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7", features = ["macros", "auto-send", "dispatching2"] }
tokio = { version = "1.15", features = ["full"] }
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.6"
indexmap = "1.7"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
